Fix ProcessMemoryMetricsEmitterBrowserTest.

The test was failing to catch the null case - where no UKM sources were being
created. This means that a bug in ResourceCoordinatorWebContentsObserver snuck
through which caused no URL to be emitted for sources.

Bug: 760733
Change-Id: Ib59139d88763156d2b8dbe18b24416bd711d5cb0